[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
dotenvy = "0.15.7"
serenity = { version = "0.12.2", features = ["http", "model", "utils"]}
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
